--- a/frontend/whiteboard-app/package.json
+++ b/frontend/whiteboard-app/package.json
@@ -1,14 +1,14 @@
 {
   "name": "whiteboard-app",
   "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:whiteboard-app": "node dist/whiteboard-app/server/server.mjs"
-  },
+"scripts": {
+  "ng": "ng",
+  "start": "ng serve",
+  "backend": "node ../../backend/server.js",
+  "build": "ng build",
+  "watch": "ng build --watch --configuration development",
+  "test": "ng test"
+},
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.1.0",
@@ -23,6 +23,7 @@
     "@angular/ssr": "^19.1.6",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
